--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.3",
+    "react-scroll": "^1.9.3",
     "typed.js": "^2.1.0",
     "yet-another-react-lightbox": "^3.23.3"
   },
