--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 # Backend API URL
 # Development: http://localhost:5000
-# Production: https://your-api-domain.com
-BACKEND_URL=http://localhost:5000
+# Production (Render): https://myportfolio-backend-mare.onrender.com
+BACKEND_URL=https://myportfolio-backend-mare.onrender.com
